examples/test/testpolicy19103.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19103
  namespace: namespace132
spec:
  podSelector:
    matchLabels:
      key18: value17
      key28: value24
      key4: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value7
          key4: value30
      podSelector:
        matchLabels:
          key31: value30
          key37: value38
